# nordselect

./: .gitignore  .travis.yml  CHANGELOG  Cargo.toml  LICENSE  README.md  dummydata.sh
.github/workflows/: rust.yml
src/: filters.rs  lib.rs  main.rs  servers.rs  sorters.rs
src/bench/: load.rs  mod.rs  ping.rs  prelude.rs
src/cli_help/: apply_filters.rs  mod.rs  parse_cli_args.rs  parse_filters.rs  parse_static_filter.rs  show_filters.rs
src/filters/: blacklist.rs  country.rs  list.rs  load.rs  mod.rs  prelude.rs  protocol.rs  region.rs
