[package]
name = "nordselect"
description = "Select the ideal NordVPN server"
version = "2.0.0"
edition = "2018"
authors = ["Ward Segers <w@rdsegers.be>"]
repository = "https://github.com/editicalu/nordselect"
license = "MIT"
homepage = "https://editicalu.github.io/nordselect"
keywords = ["vpn", "nordvpn"]

[badges]
maintenance = { status = "passively-maintained" }
travis-ci = { repository = "editicalu/nordselect" }

[features]
default = []

# Will be deleted in nordselect 3.0.0
deprecated-oping = ["oping"]

[dependencies]
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
# Blocking will be deleted in version 3.0.0
reqwest = { version = "0.10.3", features = ["blocking"] }
regex = "^1"
lazy_static = "1.4.0"
futures = "0.3.4"
urlparse = "0.7.2"
tokio = { version = "0.2", features = ["full"] }

oping = { version = "0.3.3", optional = true }

[dependencies.clap]
version = "^2"
default-features = false
features = [ "suggestions", "color" ]
