[package]
name = "nordselect"
description = "Select the ideal NordVPN server"
version = "1.4.5"
authors = ["Ward Segers <w@rdsegers.be>"]
repository = "https://github.com/editicalu/nordselect"
license = "MIT"
homepage = "https://editicalu.github.io/nordselect"
keywords = ["vpn", "nordvpn"]
edition = "2018"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
reqwest = { version = "0.11.12", features = [ "blocking" ] }
oping = "0.4.0"
regex = "^1.6"

[dependencies.clap]
version = "^2"
default-features = false
features = [ "suggestions", "color" ]
